Implementation User API's

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 ## Hibernate logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+# App Properties JwtUtils
+evertix.financialwallet.jwtSecret=FinancialWalletSecretKey
+evertix.financialwallet.jwtExpirationMs=864000000
