Add Virtual Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #  dev: For development
 #  test: For testing
 #  prod: For heroku deployment
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # Hibernate Properties
 # SQL Dialect parameters
