--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.profiles.active=prod
 
 # Hibernate Properties
 # SQL Dialect parameters
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 ## Hibernate DDL auto
 spring.jpa.hibernate.ddl-auto=create-drop
 ## Hibernate logging
